Reduce duplication again